Hand for finish GoodDetail, clientPage has't done yet.
